Automatically update csharp client (ref: Cosmo-Tech/cosmotech-api@3346fb3acc0778d834a9b4542cfe816e27b0f06e)
