# src/Com.Cosmotech/Api/ConnectorApi.cs
@@ -71,26 +71,6 @@ namespace Com.Cosmotech.Api
         /// <returns>ApiResponse of Connector</returns>
         ApiResponse<Connector> FindConnectorByIdWithHttpInfo(string connectorId, int operationIndex = 0);
         /// <summary>
-        /// Get the details of a connector
-        /// </summary>
-        /// <exception cref="Com.Cosmotech.Client.ApiException">Thrown when fails to make API call</exception>
-        /// <param name="connectorName">the Connector name</param>
-        /// <param name="operationIndex">Index associated with the operation.</param>
-        /// <returns>Connector</returns>
-        Connector FindConnectorByName(string connectorName, int operationIndex = 0);
-
-        /// <summary>
-        /// Get the details of a connector
-        /// </summary>
-        /// <remarks>
-        /// 
-        /// </remarks>
-        /// <exception cref="Com.Cosmotech.Client.ApiException">Thrown when fails to make API call</exception>
-        /// <param name="connectorName">the Connector name</param>
-        /// <param name="operationIndex">Index associated with the operation.</param>
-        /// <returns>ApiResponse of Connector</returns>
-        ApiResponse<Connector> FindConnectorByNameWithHttpInfo(string connectorName, int operationIndex = 0);
-        /// <summary>
         /// Register a new connector
         /// </summary>
         /// <exception cref="Com.Cosmotech.Client.ApiException">Thrown when fails to make API call</exception>
@@ -191,31 +171,6 @@ namespace Com.Cosmotech.Api
         /// <param name="cancellationToken">Cancellation Token to cancel the request.</param>
         /// <returns>Task of ApiResponse (Connector)</returns>
         System.Threading.Tasks.Task<ApiResponse<Connector>> FindConnectorByIdWithHttpInfoAsync(string connectorId, int operationIndex = 0, System.Threading.CancellationToken cancellationToken = default(System.Threading.CancellationToken));
-        /// <summary>
-        /// Get the details of a connector
-        /// </summary>
-        /// <remarks>
-        /// 
-        /// </remarks>
-        /// <exception cref="Com.Cosmotech.Client.ApiException">Thrown when fails to make API call</exception>
-        /// <param name="connectorName">the Connector name</param>
-        /// <param name="operationIndex">Index associated with the operation.</param>
-        /// <param name="cancellationToken">Cancellation Token to cancel the request.</param>
-        /// <returns>Task of Connector</returns>
-        System.Threading.Tasks.Task<Connector> FindConnectorByNameAsync(string connectorName, int operationIndex = 0, System.Threading.CancellationToken cancellationToken = default(System.Threading.CancellationToken));
-
-        /// <summary>
-        /// Get the details of a connector
-        /// </summary>
-        /// <remarks>
-        /// 
-        /// </remarks>
-        /// <exception cref="Com.Cosmotech.Client.ApiException">Thrown when fails to make API call</exception>
-        /// <param name="connectorName">the Connector name</param>
-        /// <param name="operationIndex">Index associated with the operation.</param>
-        /// <param name="cancellationToken">Cancellation Token to cancel the request.</param>
-        /// <returns>Task of ApiResponse (Connector)</returns>
-        System.Threading.Tasks.Task<ApiResponse<Connector>> FindConnectorByNameWithHttpInfoAsync(string connectorName, int operationIndex = 0, System.Threading.CancellationToken cancellationToken = default(System.Threading.CancellationToken));
         /// <summary>
         /// Register a new connector
         /// </summary>
@@ -735,182 +690,6 @@ namespace Com.Cosmotech.Api
             if (this.ExceptionFactory != null)
             {
                 Exception _exception = this.ExceptionFactory("FindConnectorById", localVarResponse);
-                if (_exception != null)
-                {
-                    throw _exception;
-                }
-            }
-
-            return localVarResponse;
-        }
-
-        /// <summary>
-        /// Get the details of a connector 
-        /// </summary>
-        /// <exception cref="Com.Cosmotech.Client.ApiException">Thrown when fails to make API call</exception>
-        /// <param name="connectorName">the Connector name</param>
-        /// <param name="operationIndex">Index associated with the operation.</param>
-        /// <returns>Connector</returns>
-        public Connector FindConnectorByName(string connectorName, int operationIndex = 0)
-        {
-            Com.Cosmotech.Client.ApiResponse<Connector> localVarResponse = FindConnectorByNameWithHttpInfo(connectorName);
-            return localVarResponse.Data;
-        }
-
-        /// <summary>
-        /// Get the details of a connector 
-        /// </summary>
-        /// <exception cref="Com.Cosmotech.Client.ApiException">Thrown when fails to make API call</exception>
-        /// <param name="connectorName">the Connector name</param>
-        /// <param name="operationIndex">Index associated with the operation.</param>
-        /// <returns>ApiResponse of Connector</returns>
-        public Com.Cosmotech.Client.ApiResponse<Connector> FindConnectorByNameWithHttpInfo(string connectorName, int operationIndex = 0)
-        {
-            // verify the required parameter 'connectorName' is set
-            if (connectorName == null)
-            {
-                throw new Com.Cosmotech.Client.ApiException(400, "Missing required parameter 'connectorName' when calling ConnectorApi->FindConnectorByName");
-            }
-
-            Com.Cosmotech.Client.RequestOptions localVarRequestOptions = new Com.Cosmotech.Client.RequestOptions();
-
-            string[] _contentTypes = new string[] {
-            };
-
-            // to determine the Accept header
-            string[] _accepts = new string[] {
-                "application/json"
-            };
-
-            var localVarContentType = Com.Cosmotech.Client.ClientUtils.SelectHeaderContentType(_contentTypes);
-            if (localVarContentType != null)
-            {
-                localVarRequestOptions.HeaderParameters.Add("Content-Type", localVarContentType);
-            }
-
-            var localVarAccept = Com.Cosmotech.Client.ClientUtils.SelectHeaderAccept(_accepts);
-            if (localVarAccept != null)
-            {
-                localVarRequestOptions.HeaderParameters.Add("Accept", localVarAccept);
-            }
-
-            localVarRequestOptions.PathParameters.Add("connector_name", Com.Cosmotech.Client.ClientUtils.ParameterToString(connectorName)); // path parameter
-
-            localVarRequestOptions.Operation = "ConnectorApi.FindConnectorByName";
-            localVarRequestOptions.OperationIndex = operationIndex;
-
-            // authentication (oAuth2AuthCode) required
-            // oauth required
-            if (!localVarRequestOptions.HeaderParameters.ContainsKey("Authorization"))
-            {
-                if (!string.IsNullOrEmpty(this.Configuration.AccessToken))
-                {
-                    localVarRequestOptions.HeaderParameters.Add("Authorization", "Bearer " + this.Configuration.AccessToken);
-                }
-                else if (!string.IsNullOrEmpty(this.Configuration.OAuthTokenUrl) &&
-                         !string.IsNullOrEmpty(this.Configuration.OAuthClientId) &&
-                         !string.IsNullOrEmpty(this.Configuration.OAuthClientSecret) &&
-                         this.Configuration.OAuthFlow != null)
-                {
-                    localVarRequestOptions.OAuth = true;
-                }
-            }
-
-            // make the HTTP request
-            var localVarResponse = this.Client.Get<Connector>("/connectors/name/{connector_name}", localVarRequestOptions, this.Configuration);
-            if (this.ExceptionFactory != null)
-            {
-                Exception _exception = this.ExceptionFactory("FindConnectorByName", localVarResponse);
-                if (_exception != null)
-                {
-                    throw _exception;
-                }
-            }
-
-            return localVarResponse;
-        }
-
-        /// <summary>
-        /// Get the details of a connector 
-        /// </summary>
-        /// <exception cref="Com.Cosmotech.Client.ApiException">Thrown when fails to make API call</exception>
-        /// <param name="connectorName">the Connector name</param>
-        /// <param name="operationIndex">Index associated with the operation.</param>
-        /// <param name="cancellationToken">Cancellation Token to cancel the request.</param>
-        /// <returns>Task of Connector</returns>
-        public async System.Threading.Tasks.Task<Connector> FindConnectorByNameAsync(string connectorName, int operationIndex = 0, System.Threading.CancellationToken cancellationToken = default(System.Threading.CancellationToken))
-        {
-            Com.Cosmotech.Client.ApiResponse<Connector> localVarResponse = await FindConnectorByNameWithHttpInfoAsync(connectorName, operationIndex, cancellationToken).ConfigureAwait(false);
-            return localVarResponse.Data;
-        }
-
-        /// <summary>
-        /// Get the details of a connector 
-        /// </summary>
-        /// <exception cref="Com.Cosmotech.Client.ApiException">Thrown when fails to make API call</exception>
-        /// <param name="connectorName">the Connector name</param>
-        /// <param name="operationIndex">Index associated with the operation.</param>
-        /// <param name="cancellationToken">Cancellation Token to cancel the request.</param>
-        /// <returns>Task of ApiResponse (Connector)</returns>
-        public async System.Threading.Tasks.Task<Com.Cosmotech.Client.ApiResponse<Connector>> FindConnectorByNameWithHttpInfoAsync(string connectorName, int operationIndex = 0, System.Threading.CancellationToken cancellationToken = default(System.Threading.CancellationToken))
-        {
-            // verify the required parameter 'connectorName' is set
-            if (connectorName == null)
-            {
-                throw new Com.Cosmotech.Client.ApiException(400, "Missing required parameter 'connectorName' when calling ConnectorApi->FindConnectorByName");
-            }
-
-
-            Com.Cosmotech.Client.RequestOptions localVarRequestOptions = new Com.Cosmotech.Client.RequestOptions();
-
-            string[] _contentTypes = new string[] {
-            };
-
-            // to determine the Accept header
-            string[] _accepts = new string[] {
-                "application/json"
-            };
-
-            var localVarContentType = Com.Cosmotech.Client.ClientUtils.SelectHeaderContentType(_contentTypes);
-            if (localVarContentType != null)
-            {
-                localVarRequestOptions.HeaderParameters.Add("Content-Type", localVarContentType);
-            }
-
-            var localVarAccept = Com.Cosmotech.Client.ClientUtils.SelectHeaderAccept(_accepts);
-            if (localVarAccept != null)
-            {
-                localVarRequestOptions.HeaderParameters.Add("Accept", localVarAccept);
-            }
-
-            localVarRequestOptions.PathParameters.Add("connector_name", Com.Cosmotech.Client.ClientUtils.ParameterToString(connectorName)); // path parameter
-
-            localVarRequestOptions.Operation = "ConnectorApi.FindConnectorByName";
-            localVarRequestOptions.OperationIndex = operationIndex;
-
-            // authentication (oAuth2AuthCode) required
-            // oauth required
-            if (!localVarRequestOptions.HeaderParameters.ContainsKey("Authorization"))
-            {
-                if (!string.IsNullOrEmpty(this.Configuration.AccessToken))
-                {
-                    localVarRequestOptions.HeaderParameters.Add("Authorization", "Bearer " + this.Configuration.AccessToken);
-                }
-                else if (!string.IsNullOrEmpty(this.Configuration.OAuthTokenUrl) &&
-                         !string.IsNullOrEmpty(this.Configuration.OAuthClientId) &&
-                         !string.IsNullOrEmpty(this.Configuration.OAuthClientSecret) &&
-                         this.Configuration.OAuthFlow != null)
-                {
-                    localVarRequestOptions.OAuth = true;
-                }
-            }
-
-            // make the HTTP request
-            var localVarResponse = await this.AsynchronousClient.GetAsync<Connector>("/connectors/name/{connector_name}", localVarRequestOptions, this.Configuration, cancellationToken).ConfigureAwait(false);
-
-            if (this.ExceptionFactory != null)
-            {
-                Exception _exception = this.ExceptionFactory("FindConnectorByName", localVarResponse);
                 if (_exception != null)
                 {
                     throw _exception;
